--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
- "name": "CatApp",
- "short_name": "Cats",
- "background_color": "#2196F3",
- "theme_color": "#2196F3",
+ "name": "MyCatPage",
+"short_name": "MyCat",
+"background_color": "#2196F3",
+"theme_color": "#2196F3",
+
  "icons": [
   {
    "src": "android-icon-36x36.png",
